----------------
-Date
-Name
-changes

--------------
December 20, 2025
Name: Sayan Bhowmik
Changes: xc/exx/, evaluateTotalEnergy.m, exchangeCorrelationPotential.m,
         h_vector_mult.m, initialization.m, scf.m, msparc_1d_*.m
1. Add HSE hybrid functional (Yukawa kernel based) - ACE with FFT/real-space helmholtz, non ACE (slow, not optimized).

--------------
December 16, 2025
Name: Lucas Timmerman
Changes:
1. Add PES_2D for generating a 2D PES
2. Add src/msparc_1d_chain_2dPES to add vacuum and modify spacing etc.

--------------
December 15, 2025
Name: Sayan Bhowmik
Changes:
1. Add Kerker preconditioner to accelerate SCF.

--------------
December 14, 2025
Name: Sayan Bhowmik
Changes:
1. Fix self energy evaluation and force correction.
2. Implemented analytical VJ and numerical bJ from VJ like SPARC
3. Merged b_guessRho and Eself together
4. Modified pseudochargeDensity_atom calculation
5. Sync Lucas commits

--------------
December 13, 2025
Name: Lucas Timmerman
Changes:
1. Updated main functions to accept inputs and adjust lattice and grid accordingly
2. Added scripts for data generation and analysis
3. Including gitignore

--------------
December 12, 2025
Name: Sayan Bhowmik
Changes: 
1. Fix self energy evaluation and force correction

--------------
December 12, 2025
Name: Lucas Timmerman
Changes: Initial Commit
1. Adding all code from Sayan to initial commit