@@ -11,7 +11,6 @@ VJ_mat = zeros(S.N,S.n_typ);
 for i = 1 : S.n_typ
     VJ_mat(:,i) = calculate_VJ(S.x,S,i);
 end
-fprintf("VJ_mat %d, %d\n", size(VJ_mat))
 
 %--------------------------------------------------------------------------
 % We are currently using pseudocharge radii implementation - can be
@@ -57,16 +56,10 @@ for JJ_a = 1:S.n_atm
         % Pseudopotential at grid points through interpolation
         % idx_type = find(S.unique_Z == S.Z(JJ_a));
         V_PS = interp1(S.x,VJ_mat(:,idx_type),abs(dd),'spline');
-        fprintf("V_PS %d, %d\n", size(V_PS))
 
         % Pseudocharge density calculation - numerical bJ
         II = 1+S.FDn : size(dd,1)-S.FDn;
-        fprintf("II %d, %d\t", size(II))
         bJ = pseudochargeDensity_atom(V_PS,II,S);
-        fprintf("bj %d, %d\t", size(bJ))
-        fprintf("S.b %d, %d\t", size(S.b))
-        fprintf("ii_s %d\t", ii_s)
-        fprintf("ii_e %d\n", ii_e)
         S.b(ii_s:ii_e) = S.b(ii_s:ii_e) + bJ(II);
 
         % Eself
